--- a/index.html
+++ b/index.html
@@ -1,143 +1,48 @@
+<h2>चहा..☕</h2>
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Srare | Words that Touch</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Open+Sans&display=swap" rel="stylesheet">
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-    body {
-      font-family: 'Open Sans', sans-serif;
-      background: #ffffff;
-      color: #333;
-      line-height: 1.6;
-    }
-    header {
-      background: #f8f9fa;
-      padding: 1rem;
-      text-align: center;
-      border-bottom: 1px solid #e0e0e0;
-    }
-    header h1 {
-      font-family: 'Playfair Display', serif;
-      font-size: 1.5rem;
-      color: #2c3e50;
-      letter-spacing: 1px;
-    }
-    header p {
-      font-size: 0.95rem;
-      color: #555;
-      max-width: 700px;
-      margin: 0.5rem auto 0;
-    }
-    nav {
-      background: #2c3e50;
-      padding: 0.5rem;
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-    }
-    nav a {
-      color: #fff;
-      margin: 0.5rem;
-      text-decoration: none;
-      font-weight: bold;
-      font-size: 0.95rem;
-    }
-    nav a:hover {
-      color: #ffc107;
-    }
-    .hero {
-      padding: 1.5rem 1rem;
-      text-align: center;
-      background: #eaf4ff;
-    }
-    .hero h2 {
-      font-size: 1.6rem;
-      margin-bottom: 0.75rem;
-    }
-    .hero p {
-      font-size: 1.1rem;
-      max-width: 700px;
-      margin: 0 auto;
-      font-style: italic;
-    }
-    .section {
-      padding: 1.5rem 1rem;
-      text-align: center;
-    }
-    .section h2 {
-      font-size: 1.4rem;
-      margin-bottom: 0.5rem;
-    }
-    .section p {
-      font-size: 1rem;
-      max-width: 700px;
-      margin: 0 auto;
-    }
-    .footer {
-      background: #2c3e50;
-      color: #fff;
-      text-align: center;
-      padding: 0.75rem;
-      font-size: 0.9rem;
-    }
-    @media (min-width: 768px) {
-      header h1 {
-        font-size: 1.8rem;
-      }
-      nav a {
-        font-size: 1rem;
-      }
-      .hero h2, .section h2 {
-        font-size: 1.8rem;
-      }
-      .hero p, .section p {
-        font-size: 1.1rem;
-      }
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>Srare</h1>
-    <p>शब्दांचे जग – जिथे कविता जीवन सांगतात, भावना व्यक्त होतात आणि आत्मा स्पर्शून जातो.</p>
-  </header>
-  <nav>
-    <a href="#home">Home</a>
-    <a href="#about">About</a>
-    <a href="#poetry">Poetry</a>
-    <a href="#blog">Blog</a>
-    <a href="#contact">Contact</a>
-  </nav>
-  <section class="hero" id="home">
-    <h2>Welcome to Srare</h2>
-    <p>A world of poetry, reflection, and soulful expression — crafted for thoughtful minds, dreamers, and seekers of beauty.</p>
-  </section>
-  <section class="section" id="about">
-    <h2>About Me</h2>
-    <p>I’m Satyavan Arjun Pawar — a poet, author, and dreamer. Through my blog, I express emotions, explore humanity, and share stories that matter.</p>
-  </section>
-  <section class="section" id="poetry">
-    <h2>Poetry</h2>
-    <p>Verses from the heart, inspired by nature, love, life, and dreams. Stay tuned for published works and originals.</p>
-  </section>
-  <section class="section" id="blog">
-    <h2>Blog</h2>
-    <p>Thoughts and reflections on society, self-growth, relationships, and creative living.</p>
-  </section>
-  <section class="section" id="contact">
-    <h2>Contact</h2>
-    <p>Email: srarepoetry@gmail.com | Instagram: @satya.srare</p>
-  </section>
-  <footer class="footer">
-    <p>&copy; 2025 Srare by Satyavan Arjun Pawar. All rights reserved.</p>
-  </footer>
-</body>
-</html>
+<p><strong>चहा...चहा म्हणजे फक्त एक पेय नाही तर ते आहे आपुलकी, प्रेम, आदरातिथ्याचं एक साधन..</strong></p>
+
+<p>आपण कधी कुठे बाहेर गावी गेलो तर पाहुणे म्हणतात चला चहा घेऊ...किंवा जेवण करू...पण जेवायचे नसेल तर किमान चहा तर घेऊच घेऊ... आपण बऱ्याचदा असे पाहतो...</p>
+
+<p>तसा दररोज आपल्या घरी सकाळी चहा, दूध, किंवा कॉफी होतच असते. पण तरीसुद्धा मग चहा एवढा प्रसिद्ध का? जेंव्हा बाहेर गावी गेल्यावर पाहुणे मंडळी विचारतात चला, चहा घेऊन येऊ..ते म्हणजे आदरातिथ्य, त्याचं आपल्यावरती असणार प्रेम होय.</p>
+
+<p>पूर्वीच्या काळी बाहेरून पाहून आला तर त्याला लगेच पाय धुण्यासाठी आपुलकीने पाणी देत असत, तर त्यामागे सुद्धा काही शास्त्रशुद्ध कारणे असत...</p>
+
+<p>आपण बोलताना सहज म्हणून जातो, की “माझी तळपायाची आग मस्तकाला गेली" – याचाच अर्थ असा की, कुठेतरी मेंदूचा आणि तळपायाचा दुवा आहे...</p>
+
+<p>तसाच पाहुणा जेव्हा बाहेरून यायचा, तेव्हा ऊन, वारा, प्रवासामुळे थकलेला असायचा. आणि पायावर पाणी टाकल्याने थंड वाटायचं व त्यानंतर गरम गरम चहा घेतल्यावर ताजेतवाने वाटायचं.</p>
+
+<p>चहा म्हणजे मनसोक्त गप्पा, विरंगुळा, आणि पुन्हा उत्साहाने कामाला लागण्याचं साधन. कधी कधी आपण मित्रांना म्हणतो – चला चहा घेऊन येऊ!</p>
+
+<p>म्हणजे गप्पा, विचारांची देवाणघेवाण, समाजकारण, राजकारण आणि हसणं-खिदळणं!</p>
+
+<p>कुठल्या उद्योजकासोबत चहा म्हणजे एखादी डील, एखादी कल्पना, एखादा तह...</p>
+
+<p>कॉलेजच्या मित्रांसोबत चहा म्हणजे धमाल, टवाळक्या, टीका-टिप्पणी...</p>
+
+<p><strong>पावसाळ्यात चहा घेण्याची मजा वेगळीच! आणि चहा प्रेमी तर म्हणतात – ४०°C तापमान असो, पण गरम चहा हवाच!</strong></p>
+
+<p>ते म्हणतात ना – चहा ला वेळ नाही, पण वेळेला चहा लागतो! कारण वयोवृद्ध असो किंवा कॉर्पोरेट नोकरदार, चहा म्हणजेच त्यांच्या दिवसाचं ताजेपण!</p>
+
+<p><strong>चहाचा प्रत्येक ठिकाणी, प्रत्येकासाठी वेगळा अर्थ असतो...</strong></p>
+
+<h3>थोडासा वैज्ञानिक आणि ऐतिहासिक दृष्टिकोन:</h3>
+
+<p>पौराणिक कथेनुसार, चहा ची उत्पत्ती ५००० वर्षांपूर्वी चिनी सम्राट शेन नुंगच्या काळात झाली. एकदा चहाच्या झाडाची पाने उकळत्या पाण्यात पडली आणि त्या पाण्याला एक खास चव आली.</p>
+
+<p>प्रारंभी चहा केवळ औषधी फायदे मिळवण्यासाठी वापरला जायचा. नंतर १६व्या शतकात चीनमधील पोर्तुगीज व्यापारी व पुजाऱ्यांनी युरोपात चहा नेला. डच लोकांनी तो पसरवला आणि शेवटी ब्रिटिशांनी तो भारतात आणला. आज चहा हे जगातील सर्वाधिक प्रचलित पेय आहे.</p>
+
+<p><strong>मुख्य चहा उत्पादक देश:</strong> भारत, चीन, केनिया, इंडोनेशिया, श्रीलंका, जपान.</p>
+
+<h3>चहाचे काही प्रसिद्ध प्रकार:</h3>
+
+<ul>
+  <li><strong>लॅप्सँग सौचोंग:</strong> चायनीज काळा चहा जो लाकडाच्या आगीवर वाळवला जातो.</li>
+  <li><strong>दा होंग पाओ:</strong> चिनी चहाचा राजा, जगातील सर्वात महागडा चहा.</li>
+  <li><strong>मसाला चहा:</strong> दालचिनी, वेलची, लवंग, बडीशेप इत्यादी मसाले मिसळून बनवलेला भारतीय चहा.</li>
+  <li><strong>मकाईबारी चहा:</strong> दार्जिलिंगमधून येणारा, जगातील एक सर्वोत्तम चहा.</li>
+</ul>
+
+<h3>शेवटी...</h3>
+
+<p><strong>चहा हे केवळ पेय नाही, ती एक संस्कृती आहे. आत्मीयता आहे. एक अदृश्य धागा आहे जो माणसाला माणसाशी जोडतो, ऋणानुबंध घट्ट करतो आणि एकमेकांविषयी आपुलकी वाढवतो!</strong></p>
