--- a/srare_updated.html
+++ b/srare_updated.html
@@ -130,7 +130,7 @@
   </section>
   <section class="section" id="contact">
     <h2>Contact</h2>
-    <p>Email: srarepoetry@gmail.com | Instagram: @satya.srare</p>
+    <p>Email: srarepoetry@gmail.com | Instagram: @satya.rare</p>
   </section>
   <footer class="footer">
     <p>&copy; 2025 Srare by Satyavan Arjun Pawar. All rights reserved.</p>
