--- a/index.html
+++ b/index.html
@@ -93,6 +93,15 @@
   <section class="section" id="blog">
     <h2>Blog</h2>
     <p>Thoughts and reflections on society, self-growth, relationships, and creative living.</p>
+    <ul> <section class="section" id="blog">
+    <h2>Blog</h2>
+    <p>Thoughts and reflections on society, self-growth, relationships, and creative living.</p>
+    
+    <ul>
+        <li><a href="chaha.html">☕ चहा</a></li>
+    </ul>
+</section>
+
   </section>
   <section class="section" id="contact">
     <h2>Contact</h2>
