--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
     <h2>Blog</h2>
     <p>Thoughts and reflections on society, self-growth, relationships, and creative living.</p>
     
-    <ul>
+    <ul> <li><a href="2025-08-09-rakshabandhan.html">रक्षाबंधन – प्रेमाचा आणि विश्वासाचा धागा</a></li>
+
         <li><a href="chaha.html">☕ चहा</a></li>
     </ul>
 </section>
